--- a/css/main-1.6.css
+++ b/css/main-1.6.css
@@ -121,7 +121,6 @@ body {
 
 .header-container {
     position:absolute;
-    bottom:20px;
     width: 100%;
     background: black;
     z-index: 10;
@@ -141,7 +140,7 @@ body {
 #introtext {
     display: block;
     padding: 10px 0 10px 0;
-    margin-bottom: 300px;
+    margin-bottom: 200px;
     background: black;
 
     -ms-border-radius: 8px;
@@ -234,7 +233,7 @@ nav ul li a::-moz-focus-inner {border:0;}
    ============== */
 
 .main {
-    padding: 5% 0;
+    padding: 30% 0;
 }
 .main header {
     float: left;
@@ -295,7 +294,7 @@ section {
     /* Fallback for web browsers that doesn't support RGBa */
     background: rgb(0, 0, 0);
     /* RGBa with 0.7 opacity */
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.4);
     /* For IE 5.5 - 7*/
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#B2000000, endColorstr=#B2000000);
     /* For IE 8*/
@@ -343,14 +342,14 @@ section h2 {
     /** get the transparent bar on the bottom **/
     .header-container {
         position:absolute;
-        bottom:20px;
+        top:0px;
         width:100%;
         line-height:12px;
     }
 
     .header-container.sticky {
         position: fixed;
-        top: 15px;
+        top: 0px;
         
         animation:thedrop 1s 1;
         -moz-animation:thedrop 1s 1;
@@ -862,7 +861,7 @@ a.email {
     margin-bottom: 0;
     float: left;
 
-    border: 4px solid #090909;
+    border: 4px solid white;
 
     -ms-border-radius: 2px;
     -o-border-radius: 2px;
