--- a/css/main-1.6.css
+++ b/css/main-1.6.css
@@ -154,7 +154,7 @@ body {
     /* Fallback for web browsers that doesn't support RGBa */
     background: rgb(255, 255, 255);
     /* RGBa with 0.7 opacity */
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0);
     /* For IE 5.5 - 7*/
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#B2000000, endColorstr=#B2000000);
     /* For IE 8*/
@@ -235,7 +235,7 @@ nav ul li a::-moz-focus-inner {border:0;}
    ============== */
 
 .main {
-    padding: 500px 0;
+    padding: 500px 0 0 0;
 }
 .main header {
     float: left;
@@ -331,7 +331,7 @@ section h2 {
    Media Queries
    ========================================================================== */
 
-@media only screen and (min-width: 480px) {
+@media only screen and (min-width: 580px) {
 
 /* ====================
     INTERMEDIATE: Menu
@@ -500,7 +500,7 @@ section h2 {
 
     nav a {
         padding: 15px 2%;
-        font-size: 90%;
+        font-size: 80%;
     }
 }
 @media only screen and (min-width: 900px) {
@@ -539,7 +539,7 @@ section h2 {
 
     nav a {
         padding: 15px 2%;
-        font-size: 120%;
+        font-size: 100%;
     }
 
     .wrapper {
@@ -886,6 +886,12 @@ a.email {
 	padding-top: 80px;
 }
 
+#rsvp-form-header {
+	font-size: 1.5em;
+	font-weight: bold;
+	padding-bottom: 20px;
+}
+
 #rsvp-text {
     display: block;
     background: white;
@@ -924,7 +930,7 @@ a.email {
 .rsvp-field input[type="text"],
 .rsvp-field textarea{
 	width: 75%;
-    font-family: 'Indie Flower', Helvetica, Arial;
+    font-family: Helvetica, Arial;
     font-weight: normal;
 }
 
@@ -933,9 +939,35 @@ a.email {
 }
 
 #rsvp-inquiry {
+	font-size: 0.7em;
 	text-align: center;
 }
 
 #rsvp-inquiry a {
 	color: blue;
+}
+
+#notfinished {
+    display: block;
+    padding: 10px 0 10px 0;
+    /*background: white;*/
+    
+    /*color: #6CA061;*/
+    color: black;
+    font-family: Helvetica, Arial, sans-serif;
+
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+
+    /* Fallback for web browsers that doesn't support RGBa */
+    background: rgb(255, 255, 255);
+    /* RGBa with 0.7 opacity */
+    background: rgba(255, 255, 255, 0.2);
+    /* For IE 5.5 - 7*/
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#B2000000, endColorstr=#B2000000);
+    /* For IE 8*/
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#B2000000, endColorstr=#B2000000)";
 }
