--- a/css/main-1.6.css
+++ b/css/main-1.6.css
@@ -72,7 +72,7 @@ body {
     font: 16px/26px Helvetica, Helvetica Neue, Arial;
 }
 
-.wp-wrapper, 
+.rsvp-wrapper,
 .wrapper {
     height: 100%;
     position: relative;
@@ -149,26 +149,9 @@ body {
     color: black;
 }
 
-#introtext .head-liana {
-    font-family: "Brain Flower", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+#introtext .jonathanandliana {
     font-size: 2em;
     line-height: 100%;
-}
-#introtext .amp {
-    position: relative;
-    top: 19px;
-    margin-left: -20px;
-    font-size: 0.7em;
-}
-#introtext .head-jonathan {
-    font-family: "Brain Flower", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    font-size: 2em;
-    line-height: 100%;
-}
-#introtext .date {
-    margin-top: 10px;
-    font-family: "Special Elite", cursive;
-    font-size: 1em;
 }
 
 /* ==============
@@ -321,12 +304,151 @@ section h2 {
     bottom: 10px;
 }
 
+
+/* home page */
+#home-bg-container {
+	position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+}
+
+/* wedding party */
+.wedding-party {
+	padding: 80px 0 30px 0;
+}
+
+#wp-pictures {
+    display: block;
+    margin-top: 200px;
+    color: black;
+}
+
+/* RSVP Section */
+.rsvp {
+	padding: 300px 0 30px 0;
+}
+
+#rsvp-form-header {
+	padding-bottom: 20px;
+	text-align: center;
+}
+
+#rsvp-invite-only {
+	font-size: 1em;
+	font-weight: bold;
+	padding-bottom: 20px;
+	text-align: center;
+}
+
+#rsvp-text {
+    color: black;
+    font-size: 0.8em;
+    
+    background: white;
+    
+    text-align: left;
+    -webkit-box-shadow: 0 0 30px 5px #999;
+       -moz-box-shadow: 0 0 30px 5px #999;
+            box-shadow: 0 0 30px 5px #999;
+}
+
+.rsvp-field input[type="submit"] {
+    font-family: Helvetica, Arial;
+    font-size: 1em;
+    padding: 2px 5px;
+}
+
+#rsvp-text {
+    padding: 20px 30px 30px 30px;
+}
+
+.rsvp-label {
+	display: inline-block;
+	width: 40%;
+	padding-right: 9%
+	vertical-align: top;
+	line-height: 2;
+}
+
+.rsvp-field {
+	display: inline-block;
+	width: 50%;
+	vertical-align: top;
+}
+
+.rsvp-field input[type="text"],
+.rsvp-field input[type="number"],
+.rsvp-field textarea {
+	width: 100%;
+    font-family: Helvetica, Arial;
+    font-weight: normal;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+    border: 1px solid #cccccc;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border linear .2s, box-shadow linear .2s;
+     -moz-transition: border linear .2s, box-shadow linear .2s;
+       -o-transition: border linear .2s, box-shadow linear .2s;
+          transition: border linear .2s, box-shadow linear .2s;
+}
+
+.rsvp-field input[type="radio"] {
+	cursor: pointer;
+	margin-top: 4px;
+}
+
+.rsvp-field textarea {
+	height: 150px;
+}
+
+.rsvp-field ul {
+	padding-left: 0;
+	margin: 0;
+}
+
+.rsvp-field li {
+	list-style-type: none;
+	list-style-image: none;
+	list-style: none;
+}
+
+#rsvp-inquiry {
+	font-size: 0.7em;
+	text-align: center;
+}
+
+#rsvp-inquiry a {
+	color: blue;
+}
+
+#rsvp-bg-container {
+	position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: #AEC6CF;
+    overflow: auto;
+}
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
 
 @media only screen and (min-width: 580px) {
 
+	#wp-pictures {
+	    display: block;
+	    margin-top: 50px;
+	    color: black;
+	}
+	
 /* ====================
     INTERMEDIATE: Menu
    ==================== */
@@ -392,7 +514,7 @@ section h2 {
         padding: 15px 1%;
         margin-bottom: 0;
         display:inline-block;
-        font-size: 60%;
+        font-size: 40%;
         white-space: nowrap;
 
         -moz-font-smoothing: antialiased;
@@ -412,7 +534,7 @@ section h2 {
         margin-top: 10%;
         float: left;
         width: 40%;
-        min-width: 	px;
+        min-width: 320px;
     }
 
     section {
@@ -425,6 +547,16 @@ section h2 {
     section h2 {
         font-size: 1.7em;
     }
+    
+    /* RSVP Section */
+	.rsvp {
+		padding: 80px 0 30px 0;
+	}
+	
+    .rsvp-wrapper {
+	    width: 522px; /* 580px - 10% for margins */
+	    margin: 0 auto;
+	}
 
 
     .column p {
@@ -434,8 +566,6 @@ section h2 {
     #gmap iframe {
         height: 600px;
     }
-
-
 
 /* ========================
     INTERMEDIATE: IE Fixes
@@ -495,7 +625,7 @@ section h2 {
 
     nav a {
         padding: 15px 2%;
-        font-size: 80%;
+        font-size: 70%;
     }
 }
 @media only screen and (min-width: 900px) {
@@ -802,7 +932,7 @@ section h2 {
 
 @font-face {
         font-family: 'Brain Flower';
-        src: url('brain-flower.ttf');
+        src: url('brain-flower.ttf') format('truetype');
         font-weight: normal;
         font-style: normal;
 }
@@ -874,124 +1004,6 @@ a.email {
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     border-radius: 2px;
-}
-
-/* home page */
-#home-bg-container {
-	position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    overflow: auto;
-}
-
-/* RSVP Section */
-@font-face {
-    font-family: "Drawing with markers";
-    src: url(/css/drawing-with-markers.ttf);
-}
-
-.rsvp {
-	padding: 40px 0 30px 0;
-}
-
-#rsvp-form-header {
-	font-size: 1em;
-	font-weight: bold;
-	padding-bottom: 20px;
-}
-
-#rsvp-text {
-    color: black;
-    font-family: Helvetica, Arial;
-    font-size: 0.8em;
-    
-    text-align: left;
-}
-
-.rsvp-field input[type="submit"] {
-    font-family: Helvetica, Arial;
-    font-size: 1em;
-    padding: 2px 5px;
-}
-
-#rsvp-text {
-    padding: 30px 30px 30px 30px;
-}
-
-.rsvp-label {
-	display: inline-block;
-	width: 40%;
-	vertical-align: top;
-	line-height: 2;
-}
-
-.rsvp-field {
-	display: inline-block;
-	width: 58%;
-}
-
-.rsvp-field input[type="text"],
-.rsvp-field input[type="number"],
-.rsvp-field textarea {
-	width: 75%;
-    font-family: Helvetica, Arial;
-    font-weight: normal;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
-    border: 1px solid #cccccc;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -webkit-transition: border linear .2s, box-shadow linear .2s;
-     -moz-transition: border linear .2s, box-shadow linear .2s;
-       -o-transition: border linear .2s, box-shadow linear .2s;
-          transition: border linear .2s, box-shadow linear .2s;
-}
-
-.rsvp-field input[type="radio"] {
-	cursor: pointer;
-	margin-top: 4px;
-}
-
-.rsvp-field textarea {
-	height: 250px;
-}
-
-.rsvp-choice {
-	list-style-type: none;
-	list-style-image: none;
-	list-style: none;
-}
-
-#rsvp-inquiry {
-	font-size: 0.7em;
-	text-align: center;
-}
-
-#rsvp-inquiry a {
-	color: blue;
-}
-
-#rsvp-bg-container {
-	position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: #AEC6CF;
-}
-
-.wedding-party {
-	padding: 80px 0 30px 0;
-}
-
-#wp-pictures {
-    display: block;
-    margin-top: 50px;
-    color: black;
 }
 
 .accomodations {
